--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
             <img src="./assets/img/Our Event Posters/poster1.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>HUNGRY GEESE</h4>
-              <p>Pursuit</p>
+              <p>PURSUIT</p>
               <a href="./assets/img/Our Event Posters/poster1.jpg" data-gallery="portfolioGallery"
                 class="portfolio-lightbox preview-link" title="HUNGRY GEESE"><i class="bi bi-plus"></i></a>
               <!-- <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bi bi-link"></i></a> -->
@@ -287,7 +287,7 @@
             <img src="./assets/img/Our Event Posters/CID.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>CID (CODE INVESTIGATION DEPARTMENT)</h4>
-              <p>Pursuit</p>
+              <p>PURSUIT</p>
               <a href="./assets/img/Our Event Posters/CID.png" data-gallery="portfolioGallery"
                 class="portfolio-lightbox preview-link" title="HUNGRY GEESE"><i class="bi bi-plus"></i></a>
               <!-- <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bi bi-link"></i></a> -->
@@ -298,7 +298,7 @@
             <img src="./assets/img/Our Event Posters/IMG-20211203-WA0005.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>EVENT PHASE-1</h4>
-              <p>Pursuit</p>
+              <p>PURSUIT</p>
               <a href="./assets/img/Our Event Posters/IMG-20211203-WA0005.jpg" data-gallery="portfolioGallery"
                 class="portfolio-lightbox preview-link" title="EVENT PHASE-1"><i class="bi bi-plus"></i></a>
               <!-- <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bi bi-link"></i></a> -->
@@ -362,13 +362,24 @@
             </div>
           </div>
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-active">
+            <img src="./assets/img/Our Event Posters/JUNIORS JAM.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>JUNIOR'S JAM</h4>
+              <p>ALL</p>
+              <a href="./assets/img/Our Event Posters/JUNIORS JAM.jpg" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="JUNIOR'S JAM"><i class="bi bi-plus"></i></a>
+              <!-- <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bi bi-link"></i></a> -->
+            </div>
+          </div>
+
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <img src=".\assets\img\Our Event Posters\JUNIORS JAM.jpg" class="img-fluid" alt="">
+            <img src="./assets/img/Our Event Posters/JUNIORS JAM Winners.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>JUNIOR'S JAM</h4>
               <p>WINNERS</p>
-              <a href=".\assets\img\Our Event Posters\JUNIORS JAM.jpg" data-gallery="portfolioGallery"
-                class="portfolio-lightbox preview-link" title="HEAD START TO COMPETITTIVE PROGRAMMING"><i
+              <a href="./assets/img/Our Event Posters/JUNIORS JAM Winners.jpg" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="JUNIOR'S JAM Winners"><i
                   class="bi bi-plus"></i></a>
               <!-- <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bi bi-link"></i></a> -->
             </div>
@@ -378,7 +389,7 @@
             <img src="./assets/img/Our Event Posters/Pursuit Mind Marvels.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>MIND MARVELS</h4>
-              <p>Pursuit</p>
+              <p>PURSUIT</p>
               <a href="./assets/img/Our Event Posters/Pursuit Mind Marvels.jpg" data-gallery="portfolioGallery"
                 class="portfolio-lightbox preview-link" title="MIND MARVELS"><i class="bi bi-plus"></i></a>
               <!-- <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bi bi-link"></i></a> -->
@@ -389,7 +400,7 @@
             <img src="./assets/img/Our Event Posters/Pursuit Prompt Engineering.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>PROMPT ENGINEERING</h4>
-              <p>Pursuit</p>
+              <p>PURSUIT</p>
               <a href="./assets/img/Our Event Posters/Pursuit Prompt Engineering.jpg" data-gallery="portfolioGallery"
                 class="portfolio-lightbox preview-link" title="PROMPT ENGINEERING"><i class="bi bi-plus"></i></a>
               <!-- <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bi bi-link"></i></a> -->
@@ -526,10 +537,10 @@
 
           <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="100000">
             <div class="mem">
-              <img src="" class="img-fluid n-img b" alt="image">
+              <img src="assets/img/2024/Jay Joshi.jpg" class="img-fluid n-img b" alt="image">
               <div class="social">
                 <a href=""><i class="bi bi-github"></i></a>
-                <a href=""><i class="bi bi-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/jay-joshi-ba778325b/"><i class="bi bi-linkedin"></i></a>
               </div>
               <div class="member-info-content">
                 <h4>Jay Joshi</h4>
@@ -578,7 +589,7 @@
               </div>
               <div class="member-info-content">
                 <h4>Om Kadu</h4>
-                <span>Technical Advisors<br>(Head)</span>
+                <span>Technical Head</span>
 
               </div>
             </div>
@@ -586,14 +597,14 @@
 
           <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="100000">
             <div class="mem">
-              <img src="" class="img-fluid n-img b" alt="image">
+              <img src="assets/img/2024/Gaurav Chaudhari.jpg" class="img-fluid n-img b" alt="image">
               <div class="social">
-                <a href=""><i class="bi bi-github"></i></a>
-                <a href=""><i class="bi bi-linkedin"></i></a>
+                <a href="https://github.com/Gaurav-Chaudhari-2003"><i class="bi bi-github"></i></a>
+                <a href="https://www.linkedin.com/in/gaurav-chaudhari-8129ab206/"><i class="bi bi-linkedin"></i></a>
               </div>
               <div class="member-info-content">
                 <h4>Gaurav Chaudhari</h4>
-                <span>Technical Advisors<br>(Head)</span>
+                <span>Technical Head</span>
 
               </div>
             </div>
@@ -631,10 +642,10 @@
 
           <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="100000">
             <div class="mem">
-              <img src="" class="img-fluid n-img b" alt="image">
+              <img src="assets/img/2024/Om Shahastrabuddhe.jpg" class="img-fluid n-img b" alt="image">
               <div class="social">
                 <a href=""><i class="bi bi-github"></i></a>
-                <a href=""><i class="bi bi-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/om-patil-sahastrabuddhe-02219329a/"><i class="bi bi-linkedin"></i></a>
               </div>
               <div class="member-info-content">
                 <h4>Om Sahastrabuddhe</h4>
