--- a/webdevteam.html
+++ b/webdevteam.html
@@ -1,23 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Development Team CSESA</title>
+    <link href="assets/img/Csesa-logo-black.png" rel="icon">
+    <link href="assets/img/Csesa-logo-black.png" rel="apple-touch-icon">
+
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f4f8;
+            color: #333;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+        a{
+            text-decoration: none;
+            color: black;
+        }
+
+        .container {
+            text-align: center;
+            background-color: #fff;
+            padding: 20px 40px;
+            border-radius: 15px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            max-width: 600px;
+            width: 100%;
+        }
+
+        h2 {
+            font-size: 2.5rem;
+            color: #007bff;
+            margin-bottom: 20px;
+        }
+
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        ul li {
+            font-size: 1.2rem;
+            margin: 10px 0;
+            background-color: #e9ecef;
+            padding: 10px 0;
+            border-radius: 10px;
+            transition: all 0.3s ease;
+            cursor: pointer;
+        }
+
+        ul li:hover {
+            background-color: #007bff;
+            color: #fff;
+            transform: scale(1.05);
+        }
+
+        @media (max-width: 768px) {
+            .container {
+                padding: 20px;
+            }
+
+            h2 {
+                font-size: 2rem;
+            }
+
+            ul li {
+                font-size: 1rem;
+            }
+        }
+    </style>
 </head>
+
 <body>
 
-    <h2> Web Dev Team CSESA</h2>
-    <ul>
-        <li>Abhishek Gawali</li>
-        <li> Nikhil Babhulkar</li>
-        <li>Gauri Zamare</li>
-        <li> Riya Dangra</li>
-        <li> Sakshi Bhombe</li>
-        <li>Sayli Agrawal</li>
-        <li>Shivani Digole<li>    
-    </ul>
-    
+    <div class="container">
+        <h2>Web Dev Team CSESA</h2>
+        <ul>
+            <a href="https://www.linkedin.com/in/abhishek-gawali-873a50215/" target="_blank"><li>Abhishek Gawali</li></a>
+            <a href="https://www.linkedin.com/in/nikhil-babhulkar-0aa202215/" target="_blank"><li>Nikhil Babhulkar</li></a>
+            <a href="https://www.linkedin.com/in/gauri-zamare-2381b5220/" target="_blank"><li>Gauri Zamare</li></a>
+            <a href="https://www.linkedin.com/in/riya-dangra-a22325213/" target="_blank"><li>Riya Dangra</li></a>
+            <a href="https://www.linkedin.com/in/sakshi-bhombe-83889a220/" target="_blank"><li>Sakshi Bhombe</li></a>
+            <a href="https://www.linkedin.com/in/sayliagrawal20/" target="_blank"><li>Sayli Agrawal</li></a>
+            <a href="https://www.linkedin.com/in/shivani-digole-435b9422b/" target="_blank"><li>Shivani Digole</li></a>
+            <a href="https://www.linkedin.com/in/om-kadu-53305425a/" target="_blank"><li>Om Kadu</li></a>
+        </ul>
+    </div>
+
 </body>
+
 </html>
