--- a/index.html
+++ b/index.html
@@ -1147,7 +1147,7 @@
             Licensing information: https://bootstrapmade.com/license/
             Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Imperial
           -->
-            Designed by <a href="webdevteam.html">Web Development Team, CSESA</a>
+            Developed by <a href="webdevteam.html" target="_blank">Web Development Team, CSESA</a>
           </div>
         </div>
       </div>
