--- a/index.html
+++ b/index.html
@@ -539,8 +539,8 @@
             <div class="mem">
               <img src="assets/img/2024/Jay Joshi.jpg" class="img-fluid n-img b" alt="image">
               <div class="social">
-                <a href=""><i class="bi bi-github"></i></a>
-                <a href="https://www.linkedin.com/in/jay-joshi-ba778325b/"><i class="bi bi-linkedin"></i></a>
+                <a href="" target="_blank"><i class="bi bi-github"></i></a>
+                <a href="https://www.linkedin.com/in/jay-joshi-ba778325b/" target="_blank"><i class="bi bi-linkedin"></i></a>
               </div>
               <div class="member-info-content">
                 <h4>Jay Joshi</h4>
@@ -554,8 +554,8 @@
             <div class="mem">
               <img src="./assets/img/2024/Bhumika Thakare.jpg" class="img-fluid n-img b" alt="image">
               <div class="social">
-                <a href="https://github.com/Bhumika2708"><i class="bi bi-github"></i></a>
-                <a href="www.linkedin.com/in/bhumika-thakare"><i class="bi bi-linkedin"></i></a>
+                <a href="https://github.com/Bhumika2708" target="_blank"><i class="bi bi-github"></i></a>
+                <a href="www.linkedin.com/in/bhumika-thakare" target="_blank"><i class="bi bi-linkedin"></i></a>
               </div>
               <div class="member-info-content">
                 <h4>Bhumika Thakare</h4>
@@ -569,8 +569,8 @@
             <div class="mem">
               <img src="" class="img-fluid n-img b" alt="image">
               <div class="social">
-                <a href=""><i class="bi bi-github"></i></a>
-                <a href=""><i class="bi bi-linkedin"></i></a>
+                <a href="" target="_blank"><i class="bi bi-github"></i></a>
+                <a href="" target="_blank"><i class="bi bi-linkedin"></i></a>
               </div>
               <div class="member-info-content">
                 <h4>Mayuri Tomar</h4>
@@ -584,8 +584,8 @@
             <div class="mem">
               <img src="./assets/img/2024/Om Kadu.jpg" class="img-fluid n-img b" alt="image">
               <div class="social">
-                <a href="https://github.com/omkadu8767"><i class="bi bi-github"></i></a>
-                <a href="https://www.linkedin.com/in/om-kadu-53305425a/"><i class="bi bi-linkedin"></i></a>
+                <a href="https://github.com/omkadu8767" target="_blank"><i class="bi bi-github"></i></a>
+                <a href="https://www.linkedin.com/in/om-kadu-53305425a/" target="_blank"><i class="bi bi-linkedin"></i></a>
               </div>
               <div class="member-info-content">
                 <h4>Om Kadu</h4>
@@ -599,8 +599,8 @@
             <div class="mem">
               <img src="assets/img/2024/Gaurav Chaudhari.jpg" class="img-fluid n-img b" alt="image">
               <div class="social">
-                <a href="https://github.com/Gaurav-Chaudhari-2003"><i class="bi bi-github"></i></a>
-                <a href="https://www.linkedin.com/in/gaurav-chaudhari-8129ab206/"><i class="bi bi-linkedin"></i></a>
+                <a href="https://github.com/Gaurav-Chaudhari-2003" target="_blank"><i class="bi bi-github"></i></a>
+                <a href="https://www.linkedin.com/in/gaurav-chaudhari-8129ab206/" target="_blank"><i class="bi bi-linkedin"></i></a>
               </div>
               <div class="member-info-content">
                 <h4>Gaurav Chaudhari</h4>
@@ -614,8 +614,8 @@
             <div class="mem">
               <img src="" class="img-fluid n-img b" alt="image">
               <div class="social">
-                <a href=""><i class="bi bi-github"></i></a>
-                <a href=""><i class="bi bi-linkedin"></i></a>
+                <a href="" target="_blank"><i class="bi bi-github"></i></a>
+                <a href="" target="_blank"><i class="bi bi-linkedin"></i></a>
               </div>
               <div class="member-info-content">
                 <h4>Madhura Bathe</h4>
@@ -629,8 +629,8 @@
             <div class="mem">
               <img src="./assets/img/2024/Krushna Kulthe.jpg" class="img-fluid n-img b" alt="image">
               <div class="social">
-                <a href="https://github.com/krushnakulthe"><i class="bi bi-github"></i></a>
-                <a href="https://www.linkedin.com/in/krushna-kulthe-79b5821ab"><i class="bi bi-linkedin"></i></a>
+                <a href="https://github.com/krushnakulthe" target="_blank"><i class="bi bi-github"></i></a>
+                <a href="https://www.linkedin.com/in/krushna-kulthe-79b5821ab" target="_blank"><i class="bi bi-linkedin"></i></a>
               </div>
               <div class="member-info-content">
                 <h4>Krushna Kulthe</h4>
@@ -644,8 +644,8 @@
             <div class="mem">
               <img src="assets/img/2024/Om Shahastrabuddhe.jpg" class="img-fluid n-img b" alt="image">
               <div class="social">
-                <a href=""><i class="bi bi-github"></i></a>
-                <a href="https://www.linkedin.com/in/om-patil-sahastrabuddhe-02219329a/"><i class="bi bi-linkedin"></i></a>
+                <a href="" target="_blank"><i class="bi bi-github"></i></a>
+                <a href="https://www.linkedin.com/in/om-patil-sahastrabuddhe-02219329a/" target="_blank"><i class="bi bi-linkedin"></i></a>
               </div>
               <div class="member-info-content">
                 <h4>Om Sahastrabuddhe</h4>
