--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
               <img src="./assets/img/2024/Bhumika Thakare.jpg" class="img-fluid n-img b" alt="image">
               <div class="social">
                 <a href="https://github.com/Bhumika2708" target="_blank"><i class="bi bi-github"></i></a>
-                <a href="www.linkedin.com/in/bhumika-thakare" target="_blank"><i class="bi bi-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/bhumika-thakare/" target="_blank"><i class="bi bi-linkedin"></i></a>
               </div>
               <div class="member-info-content">
                 <h4>Bhumika Thakare</h4>
