--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
         <h2> <span class="typed" data-typed-items=", Design, Code , Create"></span></h2>
         <div class="actions">
-          <a href="#about" class="btn-get-started">Get Started</a>
+          <a href="#about" class="btn-get-started">Know More</a>
           <a href="#portfolio" class="btn-services">Our Events</a>
         </div>
       </div>
@@ -137,7 +137,7 @@
   <!-- ======= Header ======= -->
   <header id="header" class="d-flex align-items-center">
     <div class="container d-flex align-items-center justify-content-between">
-      <img src="./assets/img/Csesalogo.jpeg" style="width: 55px ;border-radius: 50%;">
+      <a href="#hero"><img src="./assets/img/Csesalogo.jpeg" style="width: 55px ;border-radius: 50%;"></a>
 
 
       <h1
@@ -1135,17 +1135,17 @@
 
               <div>
                 <i class="bi bi-envelope"></i>
-                <p>csesassgmce2023@gmail.com</p>
+                <p>csesassgmce2021@gmail.com</p>
               </div>
 
               <div>
                 <i class="bi bi-phone"></i>
-                <p>8767052828</p>
+                <p>7499488487</p>
               </div>
 
               <div>
                 <i class="bi bi-phone"></i>
-                <p>7083552591</p>
+                <p>8767488109</p>
               </div>
 
 
