--- a/index.html
+++ b/index.html
@@ -1135,7 +1135,21 @@
 
               <div>
                 <i class="bi bi-envelope"></i>
-                <p>csesassgmce2021@gmail.com</p>
+                <a href="mailto:csesassgmce2021@gmail.com" target="_blank" style="text-decoration: none; color: black;"><p>csesassgmce2021@gmail.com</p></a>
+              </div>
+
+              <div>
+                <i class="bi bi-linkedin"></i>
+                <a href="https://www.linkedin.com/company/csesa-ssgmce" target="_blank" style="text-decoration: none;
+            color: black;"><p>csesa_ssgmce2024</p></a>
+              </div>
+
+              <div>
+                <i class="bi bi-instagram"></i>
+                <a href="https://www.instagram.com/csesa_ssgmce2024?igsh=c21sOXFzNjBkdjAy" target="_blank" style="text-decoration: none;
+                          color: black;">
+                  <p>@csesa_ssgmce2024</p>
+                </a>
               </div>
 
               <div>
