--- a/index.html
+++ b/index.html
@@ -778,7 +778,7 @@
 
           <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="100000">
             <div class="mem">
-              <img src="./assets/img/2024/Lokesh Bandurkar.jpg" class="img-fluid n-img b" alt="image">
+              <img src="./assets/img/2024/Lokesh_Bandurkar.jpg" class="img-fluid n-img b" alt="image">
               <div class="social">
                 <a href="https://github.com/lokesh040306"><i class="bi bi-github"></i></a>
                 <a href="https://www.linkedin.com/in/lokesh-bandurkar-1aa57228a"><i class="bi bi-linkedin"></i></a>
@@ -853,7 +853,7 @@
 
           <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="100000">
             <div class="mem">
-              <img src="./assets/img/2024/Yash Mali.jpg" class="img-fluid n-img b" alt="image">
+              <img src="./assets/img/2024/Yash_Mali.jpg" class="img-fluid n-img b" alt="image">
               <div class="social">
                 <a href="https://github.com/yashpatilmali"><i class="bi bi-github"></i></a>
                 <a href="https://www.linkedin.com/in/yashpatilmali"><i class="bi bi-linkedin"></i></a>
