--- a/webdevteam.html
+++ b/webdevteam.html
@@ -82,7 +82,7 @@
 <body>
 
     <div class="container">
-        <h2>Web Dev Team CSESA</h2>
+        <h2 style="text-decoration: underline;">Web Dev Team CSESA</h2>
         <ul>
             <a href="https://www.linkedin.com/in/abhishek-gawali-873a50215/" target="_blank"><li>Abhishek Gawali</li></a>
             <a href="https://www.linkedin.com/in/nikhil-babhulkar-0aa202215/" target="_blank"><li>Nikhil Babhulkar</li></a>
